# notify-craper

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  serverless.yml
.github/workflows/: build-deploy.yml
src/: main.rs  model.rs
