[package]
name = "scrap-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.4.1"
aws-config = "0.5.2"
aws-sdk-sns = "0.5.2"
serde = "1.0.130"
serde_json = "1.0.69"
dotenv = "0.15.0"



