[package]
name = "scrap-notify"
version = "0.1.0"
edition = "2021"
autobins = false


[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.4.1"
aws-config = "0.5.2"
aws-sdk-sns = "0.5.2"
serde = "1.0.130"
serde_json = "1.0.69"
dotenv = "0.15.0"
log = "0.4"

[[bin]]
name = "bootstrap"
path = "src/main.rs"